parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     primary_expression -> ID
Rule 3     primary_expression -> INTNUM
Rule 4     primary_expression -> FLOATNUM
Rule 5     primary_expression -> ( expression )
Rule 6     primary_expression -> [ ]
Rule 7     primary_expression -> [ index_expression_list ]
Rule 8     postfix_expression -> primary_expression
Rule 9     postfix_expression -> array_expression
Rule 10    postfix_expression -> postfix_expression '
Rule 11    index_expression -> :
Rule 12    index_expression -> expression
Rule 13    index_expression_list -> index_expression
Rule 14    index_expression_list -> index_expression_list , index_expression
Rule 15    index_expression_list -> index_expression_list ; index_expression_list
Rule 16    print_index_expression_list -> ID
Rule 17    print_index_expression_list -> print_index_expression_list , ID
Rule 18    array_expression -> ID ( index_expression_list )
Rule 19    array_expression -> ID [ index_expression_list ]
Rule 20    unary_expression -> postfix_expression
Rule 21    unary_expression -> - postfix_expression
Rule 22    multiplicative_expression -> unary_expression
Rule 23    multiplicative_expression -> multiplicative_expression * unary_expression
Rule 24    multiplicative_expression -> multiplicative_expression / unary_expression
Rule 25    multiplicative_expression -> multiplicative_expression DOTMUL unary_expression
Rule 26    multiplicative_expression -> multiplicative_expression DOTDIV unary_expression
Rule 27    additive_expression -> multiplicative_expression
Rule 28    additive_expression -> additive_expression + multiplicative_expression
Rule 29    additive_expression -> additive_expression - multiplicative_expression
Rule 30    additive_expression -> additive_expression DOTADD multiplicative_expression
Rule 31    additive_expression -> additive_expression DOTMINUS multiplicative_expression
Rule 32    relational_expression -> additive_expression
Rule 33    relational_expression -> relational_expression < additive_expression
Rule 34    relational_expression -> relational_expression > additive_expression
Rule 35    relational_expression -> relational_expression LESSEREQ additive_expression
Rule 36    relational_expression -> relational_expression GREATEREQ additive_expression
Rule 37    equality_expression -> relational_expression
Rule 38    equality_expression -> equality_expression EQ relational_expression
Rule 39    equality_expression -> equality_expression NOTEQ relational_expression
Rule 40    special_expression -> equality_expression
Rule 41    special_expression -> ZEROS ( additive_expression )
Rule 42    special_expression -> ONES ( additive_expression )
Rule 43    special_expression -> EYE ( additive_expression )
Rule 44    special_expression -> PRINT print_index_expression_list
Rule 45    special_expression -> PRINT NORMSTRING
Rule 46    special_expression -> RETURN postfix_expression
Rule 47    special_expression -> CONTINUE
Rule 48    special_expression -> BREAK
Rule 49    expression -> special_expression
Rule 50    expression -> expression : special_expression
Rule 51    assignment_expression -> postfix_expression = expression
Rule 52    assignment_expression -> postfix_expression ADDASSIGN expression
Rule 53    assignment_expression -> postfix_expression SUBASSIGN expression
Rule 54    assignment_expression -> postfix_expression MULASSIGN expression
Rule 55    assignment_expression -> postfix_expression DIVASSIGN expression
Rule 56    eostmt -> ,
Rule 57    eostmt -> ;
Rule 58    statement -> assignment_statement
Rule 59    statement -> expression_statement
Rule 60    statement -> selection_statement
Rule 61    statement -> iteration_statement
Rule 62    statement_list -> statement
Rule 63    statement_list -> statement statement_list
Rule 64    expression_statement -> eostmt
Rule 65    expression_statement -> expression eostmt
Rule 66    assignment_statement -> assignment_expression eostmt
Rule 67    selection_statement -> IF ( expression ) statement
Rule 68    selection_statement -> IF ( expression ) statement ELSE statement
Rule 69    selection_statement -> IF ( expression ) { statement_list }
Rule 70    selection_statement -> IF ( expression ) { statement_list } ELSE { statement_list }
Rule 71    iteration_statement -> WHILE ( expression ) { statement_list }
Rule 72    iteration_statement -> FOR ID = expression { statement_list }
Rule 73    iteration_statement -> FOR ( ID = expression ) { statement_list }

Terminals, with rules where they appear

'                    : 10
(                    : 5 18 41 42 43 67 68 69 70 71 73
)                    : 5 18 41 42 43 67 68 69 70 71 73
*                    : 23
+                    : 28
,                    : 14 17 56
-                    : 21 29
/                    : 24
:                    : 11 50
;                    : 15 57
<                    : 33
=                    : 51 72 73
>                    : 34
ADDASSIGN            : 52
BREAK                : 48
CONTINUE             : 47
DIVASSIGN            : 55
DOTADD               : 30
DOTDIV               : 26
DOTMINUS             : 31
DOTMUL               : 25
ELSE                 : 68 70
EQ                   : 38
EYE                  : 43
FLOATNUM             : 4
FOR                  : 72 73
GREATEREQ            : 36
ID                   : 2 16 17 18 19 72 73
IF                   : 67 68 69 70
INTNUM               : 3
LESSEREQ             : 35
MULASSIGN            : 54
NORMSTRING           : 45
NOTEQ                : 39
ONES                 : 42
PRINT                : 44 45
RETURN               : 46
SUBASSIGN            : 53
WHILE                : 71
ZEROS                : 41
[                    : 6 7 19
]                    : 6 7 19
error                : 
{                    : 69 70 70 71 72 73
}                    : 69 70 70 71 72 73

Nonterminals, with rules where they appear

additive_expression  : 28 29 30 31 32 33 34 35 36 41 42 43
array_expression     : 9
assignment_expression : 66
assignment_statement : 58
eostmt               : 64 65 66
equality_expression  : 38 39 40
expression           : 5 12 50 51 52 53 54 55 65 67 68 69 70 71 72 73
expression_statement : 59
index_expression     : 13 14
index_expression_list : 7 14 15 15 18 19
iteration_statement  : 61
multiplicative_expression : 23 24 25 26 27 28 29 30 31
postfix_expression   : 10 20 21 46 51 52 53 54 55
primary_expression   : 8
print_index_expression_list : 17 44
program              : 0
relational_expression : 33 34 35 36 37 38 39
selection_statement  : 60
special_expression   : 49 50
statement            : 62 63 67 68 68
statement_list       : 1 63 69 70 70 71 72 73
unary_expression     : 22 23 24 25 26

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (62) statement_list -> . statement
    (63) statement_list -> . statement statement_list
    (58) statement -> . assignment_statement
    (59) statement -> . expression_statement
    (60) statement -> . selection_statement
    (61) statement -> . iteration_statement
    (66) assignment_statement -> . assignment_expression eostmt
    (64) expression_statement -> . eostmt
    (65) expression_statement -> . expression eostmt
    (67) selection_statement -> . IF ( expression ) statement
    (68) selection_statement -> . IF ( expression ) statement ELSE statement
    (69) selection_statement -> . IF ( expression ) { statement_list }
    (70) selection_statement -> . IF ( expression ) { statement_list } ELSE { statement_list }
    (71) iteration_statement -> . WHILE ( expression ) { statement_list }
    (72) iteration_statement -> . FOR ID = expression { statement_list }
    (73) iteration_statement -> . FOR ( ID = expression ) { statement_list }
    (51) assignment_expression -> . postfix_expression = expression
    (52) assignment_expression -> . postfix_expression ADDASSIGN expression
    (53) assignment_expression -> . postfix_expression SUBASSIGN expression
    (54) assignment_expression -> . postfix_expression MULASSIGN expression
    (55) assignment_expression -> . postfix_expression DIVASSIGN expression
    (56) eostmt -> . ,
    (57) eostmt -> . ;
    (49) expression -> . special_expression
    (50) expression -> . expression : special_expression
    (8) postfix_expression -> . primary_expression
    (9) postfix_expression -> . array_expression
    (10) postfix_expression -> . postfix_expression '
    (40) special_expression -> . equality_expression
    (41) special_expression -> . ZEROS ( additive_expression )
    (42) special_expression -> . ONES ( additive_expression )
    (43) special_expression -> . EYE ( additive_expression )
    (44) special_expression -> . PRINT print_index_expression_list
    (45) special_expression -> . PRINT NORMSTRING
    (46) special_expression -> . RETURN postfix_expression
    (47) special_expression -> . CONTINUE
    (48) special_expression -> . BREAK
    (2) primary_expression -> . ID
    (3) primary_expression -> . INTNUM
    (4) primary_expression -> . FLOATNUM
    (5) primary_expression -> . ( expression )
    (6) primary_expression -> . [ ]
    (7) primary_expression -> . [ index_expression_list ]
    (18) array_expression -> . ID ( index_expression_list )
    (19) array_expression -> . ID [ index_expression_list ]
    (37) equality_expression -> . relational_expression
    (38) equality_expression -> . equality_expression EQ relational_expression
    (39) equality_expression -> . equality_expression NOTEQ relational_expression
    (32) relational_expression -> . additive_expression
    (33) relational_expression -> . relational_expression < additive_expression
    (34) relational_expression -> . relational_expression > additive_expression
    (35) relational_expression -> . relational_expression LESSEREQ additive_expression
    (36) relational_expression -> . relational_expression GREATEREQ additive_expression
    (27) additive_expression -> . multiplicative_expression
    (28) additive_expression -> . additive_expression + multiplicative_expression
    (29) additive_expression -> . additive_expression - multiplicative_expression
    (30) additive_expression -> . additive_expression DOTADD multiplicative_expression
    (31) additive_expression -> . additive_expression DOTMINUS multiplicative_expression
    (22) multiplicative_expression -> . unary_expression
    (23) multiplicative_expression -> . multiplicative_expression * unary_expression
    (24) multiplicative_expression -> . multiplicative_expression / unary_expression
    (25) multiplicative_expression -> . multiplicative_expression DOTMUL unary_expression
    (26) multiplicative_expression -> . multiplicative_expression DOTDIV unary_expression
    (20) unary_expression -> . postfix_expression
    (21) unary_expression -> . - postfix_expression

    IF              shift and go to state 11
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    ,               shift and go to state 17
    ;               shift and go to state 18
    ZEROS           shift and go to state 23
    ONES            shift and go to state 25
    EYE             shift and go to state 26
    PRINT           shift and go to state 27
    RETURN          shift and go to state 28
    CONTINUE        shift and go to state 29
    BREAK           shift and go to state 30
    ID              shift and go to state 15
    INTNUM          shift and go to state 31
    FLOATNUM        shift and go to state 32
    (               shift and go to state 12
    [               shift and go to state 33
    -               shift and go to state 36

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    assignment_statement           shift and go to state 4
    expression_statement           shift and go to state 5
    selection_statement            shift and go to state 6
    iteration_statement            shift and go to state 7
    assignment_expression          shift and go to state 8
    eostmt                         shift and go to state 9
    expression                     shift and go to state 10
    postfix_expression             shift and go to state 16
    special_expression             shift and go to state 19
    primary_expression             shift and go to state 20
    array_expression               shift and go to state 21
    equality_expression            shift and go to state 22
    additive_expression            shift and go to state 24
    relational_expression          shift and go to state 34
    multiplicative_expression      shift and go to state 35
    unary_expression               shift and go to state 37

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .

    $end            reduce using rule 1 (program -> statement_list .)


state 3

    (62) statement_list -> statement .
    (63) statement_list -> statement . statement_list
    (62) statement_list -> . statement
    (63) statement_list -> . statement statement_list
    (58) statement -> . assignment_statement
    (59) statement -> . expression_statement
    (60) statement -> . selection_statement
    (61) statement -> . iteration_statement
    (66) assignment_statement -> . assignment_expression eostmt
    (64) expression_statement -> . eostmt
    (65) expression_statement -> . expression eostmt
    (67) selection_statement -> . IF ( expression ) statement
    (68) selection_statement -> . IF ( expression ) statement ELSE statement
    (69) selection_statement -> . IF ( expression ) { statement_list }
    (70) selection_statement -> . IF ( expression ) { statement_list } ELSE { statement_list }
    (71) iteration_statement -> . WHILE ( expression ) { statement_list }
    (72) iteration_statement -> . FOR ID = expression { statement_list }
    (73) iteration_statement -> . FOR ( ID = expression ) { statement_list }
    (51) assignment_expression -> . postfix_expression = expression
    (52) assignment_expression -> . postfix_expression ADDASSIGN expression
    (53) assignment_expression -> . postfix_expression SUBASSIGN expression
    (54) assignment_expression -> . postfix_expression MULASSIGN expression
    (55) assignment_expression -> . postfix_expression DIVASSIGN expression
    (56) eostmt -> . ,
    (57) eostmt -> . ;
    (49) expression -> . special_expression
    (50) expression -> . expression : special_expression
    (8) postfix_expression -> . primary_expression
    (9) postfix_expression -> . array_expression
    (10) postfix_expression -> . postfix_expression '
    (40) special_expression -> . equality_expression
    (41) special_expression -> . ZEROS ( additive_expression )
    (42) special_expression -> . ONES ( additive_expression )
    (43) special_expression -> . EYE ( additive_expression )
    (44) special_expression -> . PRINT print_index_expression_list
    (45) special_expression -> . PRINT NORMSTRING
    (46) special_expression -> . RETURN postfix_expression
    (47) special_expression -> . CONTINUE
    (48) special_expression -> . BREAK
    (2) primary_expression -> . ID
    (3) primary_expression -> . INTNUM
    (4) primary_expression -> . FLOATNUM
    (5) primary_expression -> . ( expression )
    (6) primary_expression -> . [ ]
    (7) primary_expression -> . [ index_expression_list ]
    (18) array_expression -> . ID ( index_expression_list )
    (19) array_expression -> . ID [ index_expression_list ]
    (37) equality_expression -> . relational_expression
    (38) equality_expression -> . equality_expression EQ relational_expression
    (39) equality_expression -> . equality_expression NOTEQ relational_expression
    (32) relational_expression -> . additive_expression
    (33) relational_expression -> . relational_expression < additive_expression
    (34) relational_expression -> . relational_expression > additive_expression
    (35) relational_expression -> . relational_expression LESSEREQ additive_expression
    (36) relational_expression -> . relational_expression GREATEREQ additive_expression
    (27) additive_expression -> . multiplicative_expression
    (28) additive_expression -> . additive_expression + multiplicative_expression
    (29) additive_expression -> . additive_expression - multiplicative_expression
    (30) additive_expression -> . additive_expression DOTADD multiplicative_expression
    (31) additive_expression -> . additive_expression DOTMINUS multiplicative_expression
    (22) multiplicative_expression -> . unary_expression
    (23) multiplicative_expression -> . multiplicative_expression * unary_expression
    (24) multiplicative_expression -> . multiplicative_expression / unary_expression
    (25) multiplicative_expression -> . multiplicative_expression DOTMUL unary_expression
    (26) multiplicative_expression -> . multiplicative_expression DOTDIV unary_expression
    (20) unary_expression -> . postfix_expression
    (21) unary_expression -> . - postfix_expression

    $end            reduce using rule 62 (statement_list -> statement .)
    }               reduce using rule 62 (statement_list -> statement .)
    IF              shift and go to state 11
    WHILE           shift and go to state 13
    FOR             shift and go to state 14
    ,               shift and go to state 17
    ;               shift and go to state 18
    ZEROS           shift and go to state 23
    ONES            shift and go to state 25
    EYE             shift and go to state 26
    PRINT           shift and go to state 27
    RETURN          shift and go to state 28
    CONTINUE        shift and go to state 29
    BREAK           shift and go to state 30
    ID              shift and go to state 15
    INTNUM          shift and go to state 31
    FLOATNUM        shift and go to state 32
    (               shift and go to state 12
    [               shift and go to state 33
    -               shift and go to state 36

    statement                      shift and go to state 3
    statement_list                 shift and go to state 38
    assignment_statement           shift and go to state 4
    expression_statement           shift and go to state 5
    selection_statement            shift and go to state 6
    iteration_statement            shift and go to state 7
    assignment_expression          shift and go to state 8
    eostmt                         shift and go to state 9
    expression                     shift and go to state 10
    postfix_expression             shift and go to state 16
    special_expression             shift and go to state 19
    primary_expression             shift and go to state 20
    array_expression               shift and go to state 21
    equality_expression            shift and go to state 22
    additive_expression            shift and go to state 24
    relational_expression          shift and go to state 34
    multiplicative_expression      shift and go to state 35
    unary_expression               shift and go to state 37

state 4

    (58) statement -> assignment_statement .

    IF              reduce using rule 58 (statement -> assignment_statement .)
    WHILE           reduce using rule 58 (statement -> assignment_statement .)
    FOR             reduce using rule 58 (statement -> assignment_statement .)
    ,               reduce using rule 58 (statement -> assignment_statement .)
    ;               reduce using rule 58 (statement -> assignment_statement .)
    ZEROS           reduce using rule 58 (statement -> assignment_statement .)
    ONES            reduce using rule 58 (statement -> assignment_statement .)
    EYE             reduce using rule 58 (statement -> assignment_statement .)
    PRINT           reduce using rule 58 (statement -> assignment_statement .)
    RETURN          reduce using rule 58 (statement -> assignment_statement .)
    CONTINUE        reduce using rule 58 (statement -> assignment_statement .)
    BREAK           reduce using rule 58 (statement -> assignment_statement .)
    ID              reduce using rule 58 (statement -> assignment_statement .)
    INTNUM          reduce using rule 58 (statement -> assignment_statement .)
    FLOATNUM        reduce using rule 58 (statement -> assignment_statement .)
    (               reduce using rule 58 (statement -> assignment_statement .)
    [               reduce using rule 58 (statement -> assignment_statement .)
    -               reduce using rule 58 (statement -> assignment_statement .)
    $end            reduce using rule 58 (statement -> assignment_statement .)
    }               reduce using rule 58 (statement -> assignment_statement .)
    ELSE            reduce using rule 58 (statement -> assignment_statement .)


state 5

    (59) statement -> expression_statement .

    IF              reduce using rule 59 (statement -> expression_statement .)
    WHILE           reduce using rule 59 (statement -> expression_statement .)
    FOR             reduce using rule 59 (statement -> expression_statement .)
    ,               reduce using rule 59 (statement -> expression_statement .)
    ;               reduce using rule 59 (statement -> expression_statement .)
    ZEROS           reduce using rule 59 (statement -> expression_statement .)
    ONES            reduce using rule 59 (statement -> expression_statement .)
    EYE             reduce using rule 59 (statement -> expression_statement .)
    PRINT           reduce using rule 59 (statement -> expression_statement .)
    RETURN          reduce using rule 59 (statement -> expression_statement .)
    CONTINUE        reduce using rule 59 (statement -> expression_statement .)
    BREAK           reduce using rule 59 (statement -> expression_statement .)
    ID              reduce using rule 59 (statement -> expression_statement .)
    INTNUM          reduce using rule 59 (statement -> expression_statement .)
    FLOATNUM        reduce using rule 59 (statement -> expression_statement .)
    (               reduce using rule 59 (statement -> expression_statement .)
    [               reduce using rule 59 (statement -> expression_statement .)
    -               reduce using rule 59 (statement -> expression_statement .)
    $end            reduce using rule 59 (statement -> expression_statement .)
    }               reduce using rule 59 (statement -> expression_statement .)
    ELSE            reduce using rule 59 (statement -> expression_statement .)


state 6

    (60) statement -> selection_statement .

    IF              reduce using rule 60 (statement -> selection_statement .)
    WHILE           reduce using rule 60 (statement -> selection_statement .)
    FOR             reduce using rule 60 (statement -> selection_statement .)
    ,               reduce using rule 60 (statement -> selection_statement .)
    ;               reduce using rule 60 (statement -> selection_statement .)
    ZEROS           reduce using rule 60 (statement -> selection_statement .)
    ONES            reduce using rule 60 (statement -> selection_statement .)
    EYE             reduce using rule 60 (statement -> selection_statement .)
    PRINT           reduce using rule 60 (statement -> selection_statement .)
    RETURN          reduce using rule 60 (statement -> selection_statement .)
    CONTINUE        reduce using rule 60 (statement -> selection_statement .)
    BREAK           reduce using rule 60 (statement -> selection_statement .)
    ID              reduce using rule 60 (statement -> selection_statement .)
    INTNUM          reduce using rule 60 (statement -> selection_statement .)
    FLOATNUM        reduce using rule 60 (statement -> selection_statement .)
    (               reduce using rule 60 (statement -> selection_statement .)
    [               reduce using rule 60 (statement -> selection_statement .)
    -               reduce using rule 60 (statement -> selection_statement .)
    $end            reduce using rule 60 (statement -> selection_statement .)
    }               reduce using rule 60 (statement -> selection_statement .)
    ELSE            reduce using rule 60 (statement -> selection_statement .)


state 7

    (61) statement -> iteration_statement .

    IF              reduce using rule 61 (statement -> iteration_statement .)
    WHILE           reduce using rule 61 (statement -> iteration_statement .)
    FOR             reduce using rule 61 (statement -> iteration_statement .)
    ,               reduce using rule 61 (statement -> iteration_statement .)
    ;               reduce using rule 61 (statement -> iteration_statement .)
    ZEROS           reduce using rule 61 (statement -> iteration_statement .)
    ONES            reduce using rule 61 (statement -> iteration_statement .)
    EYE             reduce using rule 61 (statement -> iteration_statement .)
    PRINT           reduce using rule 61 (statement -> iteration_statement .)
    RETURN          reduce using rule 61 (statement -> iteration_statement .)
    CONTINUE        reduce using rule 61 (statement -> iteration_statement .)
    BREAK           reduce using rule 61 (statement -> iteration_statement .)
    ID              reduce using rule 61 (statement -> iteration_statement .)
    INTNUM          reduce using rule 61 (statement -> iteration_statement .)
    FLOATNUM        reduce using rule 61 (statement -> iteration_statement .)
    (               reduce using rule 61 (statement -> iteration_statement .)
    [               reduce using rule 61 (statement -> iteration_statement .)
    -               reduce using rule 61 (statement -> iteration_statement .)
    $end            reduce using rule 61 (statement -> iteration_statement .)
    }               reduce using rule 61 (statement -> iteration_statement .)
    ELSE            reduce using rule 61 (statement -> iteration_statement .)


state 8

    (66) assignment_statement -> assignment_expression . eostmt
    (56) eostmt -> . ,
    (57) eostmt -> . ;

    ,               shift and go to state 17
    ;               shift and go to state 18

    eostmt                         shift and go to state 39

state 9

    (64) expression_statement -> eostmt .

    IF              reduce using rule 64 (expression_statement -> eostmt .)
    WHILE           reduce using rule 64 (expression_statement -> eostmt .)
    FOR             reduce using rule 64 (expression_statement -> eostmt .)
    ,               reduce using rule 64 (expression_statement -> eostmt .)
    ;               reduce using rule 64 (expression_statement -> eostmt .)
    ZEROS           reduce using rule 64 (expression_statement -> eostmt .)
    ONES            reduce using rule 64 (expression_statement -> eostmt .)
    EYE             reduce using rule 64 (expression_statement -> eostmt .)
    PRINT           reduce using rule 64 (expression_statement -> eostmt .)
    RETURN          reduce using rule 64 (expression_statement -> eostmt .)
    CONTINUE        reduce using rule 64 (expression_statement -> eostmt .)
    BREAK           reduce using rule 64 (expression_statement -> eostmt .)
    ID              reduce using rule 64 (expression_statement -> eostmt .)
    INTNUM          reduce using rule 64 (expression_statement -> eostmt .)
    FLOATNUM        reduce using rule 64 (expression_statement -> eostmt .)
    (               reduce using rule 64 (expression_statement -> eostmt .)
    [               reduce using rule 64 (expression_statement -> eostmt .)
    -               reduce using rule 64 (expression_statement -> eostmt .)
    $end            reduce using rule 64 (expression_statement -> eostmt .)
    }               reduce using rule 64 (expression_statement -> eostmt .)
    ELSE            reduce using rule 64 (expression_statement -> eostmt .)


state 10

    (65) expression_statement -> expression . eostmt
    (50) expression -> expression . : special_expression
    (56) eostmt -> . ,
    (57) eostmt -> . ;

    :               shift and go to state 41
    ,               shift and go to state 17
    ;               shift and go to state 18

    eostmt                         shift and go to state 40

state 11

    (67) selection_statement -> IF . ( expression ) statement
    (68) selection_statement -> IF . ( expression ) statement ELSE statement
    (69) selection_statement -> IF . ( expression ) { statement_list }
    (70) selection_statement -> IF . ( expression ) { statement_list } ELSE { statement_list }

    (               shift and go to state 42


state 12
